public interface IPlantActions {
   void water();

   void harvest();

}
